# odgg

./: .env.example  .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODOS.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/odgg/: __init__.py  app.py  cli.py
backend/odgg/api/v1/: ai_config.py  briefs.py  metadata.py  modeling.py  sessions.py
backend/odgg/core/: config.py  database.py  logging.py
backend/odgg/models/: __init__.py  ai_config.py  brief.py  dimensional.py  metadata.py  session.py
backend/odgg/services/: brief_bridge.py  codegen.py  llm_router.py  metadata_discovery.py  modeling_engine.py  sanitizer.py
backend/odgg/templates/: brief_export.md.j2  data_dictionary.md.j2  dbt_dimension.sql.j2  dbt_fact.sql.j2  dbt_schema.yml.j2  ddl.sql.j2  etl.sql.j2
backend/tests/: conftest.py  test_ai_config.py  test_api.py  test_api_modeling.py  test_brief_bridge.py  test_briefs.py  test_cli.py  test_codegen.py  test_eval_brief_quality.py  test_llm_router.py  test_logging.py  test_metadata_discovery.py  test_modeling_engine.py  test_models.py  test_sanitizer.py
docker/tpc-h/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AISuggestionBubble.tsx  BottomDrawer.tsx  CodeBlock.tsx  CodeOutput.tsx  ConnectStep.tsx  DBInfoPanel.tsx  DatasourceManager.tsx  ErrorBoundary.tsx  ModelDiagram.tsx  NotebookCell.tsx  StepNavigator.tsx  StepProgress.tsx  ThemeToggle.tsx
(+24 files in other folders)
